# golden-dent-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  messages.py  scheduler.py  sheets.py  storage.py  telegram_bot.py
nginx/: nginx.conf
tests/: test_sheets.py  test_storage.py
